階層を変更

--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>メンテナンスページです</h1>
-    <p><a href="/test">テストページ</a></p>
-    <p><a href="/notice">お知らせメンテナンスページ</a></p>
+    <p><a href="./test">テストページ</a></p>
+    <p><a href="./notice">お知らせメンテナンスページ</a></p>
   </body>
 </html>
